# govhack-2025-factshield

./: LICENSE
fact-shield-ui/: package.json
fact-shield-ui/src/: App.tsx  api.ts  index.css  types.ts
model-api/: .env  claims.db  docker-compose.yml  pyproject.toml
model-api/data/: ce-expenses-1-july-2017-to-30-june-2018.xlsx  sopi-2004-2024.csv  sopi-long.csv  test.csv
model-api/src/api/: auth.py  controller.py
model-api/src/api/model/: db.py
model-api/src/api/utils/: detector_gemini.py  ingest.py  init_claims.py  init_fact_checkers.py  retrieve.py
